--- a/FE/src/app/features/apartment/components/apartment-update/apartment-update.component.html
+++ b/FE/src/app/features/apartment/components/apartment-update/apartment-update.component.html
@@ -179,7 +179,7 @@
     </div>
 
     <!-- Photos view -->
-    <div class="row">
+    <div class="row position-relative">
       <h5>Ảnh của phòng</h5>
       @for (photo of data.photos; track $index) {
       <div class="col-2">
