--- a/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
+++ b/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
@@ -37,7 +37,7 @@
           <tr>
             <th scope="row">Thể loại</th>
             <td>
-              {{ category[data.category] }}
+              {{ categoryFilter[data.category] }}
             </td>
           </tr>
           <tr>
@@ -77,7 +77,7 @@
           <tr>
             <th scope="row">Nội thất</th>
             <td>
-              {{ interior[data.interior] }}
+              {{ interiorFilter[data.interior] }}
             </td>
           </tr>
           <tr>
@@ -101,7 +101,7 @@
           <tr>
             <th scope="row">Tình trạng</th>
             <td>
-              {{ condition[data.condition] }}
+              {{ conditionFilter[data.condition] }}
             </td>
           </tr>
         </tbody>
