--- a/FE/src/app/features/faq/faq.component.html
+++ b/FE/src/app/features/faq/faq.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <!-- Faq Column -->
-    <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
+    <div class="col-lg-10">
       <div class="faq-container">
         <!-- Faq item-->
         <div class="faq-item faq-active">
