--- a/FE/src/app/features/home/components/home-stats/home-stats.component.html
+++ b/FE/src/app/features/home/components/home-stats/home-stats.component.html
@@ -1,5 +1,5 @@
 <section id="stats" class="stats section">
-  <div class="container" data-aos="fade-up">
+  <div class="container">
     <div class="row gy-4">
       @for (item of [1,2,3,4]; track $index) {
       <div class="col-lg-3 col-md-6">
