--- a/FE/src/app/features/home/pages/home/home.component.html
+++ b/FE/src/app/features/home/pages/home/home.component.html
@@ -8,11 +8,11 @@
     <!-- Services Section -->
     <section class="services section">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title">
         <h2>Dịch vụ của chúng tôi</h2>
       </div>
       <!-- Service List -->
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <app-service-list></app-service-list>
       </div>
     </section>
@@ -20,11 +20,11 @@
     <!-- Post Recent Section -->
     <section class="real-estate section">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title">
         <h2>Những bài đăng gần đây</h2>
       </div>
       <!-- Recent Posts -->
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <app-post-list></app-post-list>
       </div>
     </section>
@@ -32,11 +32,11 @@
     <!-- Rentaler Section -->
     <section class="agents section">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title">
         <h2>Người cho thuê được yêu thích nhất</h2>
       </div>
       <!-- Rentaler List -->
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <app-lessor-list></app-lessor-list>
       </div>
     </section>
@@ -45,11 +45,11 @@
     <!-- Feedbacks Section -->
     <section class="testimonials section">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title">
         <h2>Mọi người nói gì về chúng tôi</h2>
       </div>
       <!-- Feedback Swiper -->
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <app-home-feedback></app-home-feedback>
       </div>
     </section>
