--- a/FE/src/app/features/lessor/pages/lessor/lessor.component.html
+++ b/FE/src/app/features/lessor/pages/lessor/lessor.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Lessor Filter Engine -->
-    <div class="mt-2" data-aos="fade-up">
+    <div class="mt-2">
       <app-lessor-filter></app-lessor-filter>
     </div>
 
