--- a/FE/src/app/features/profiles/components/profile-edit-overview/profile-edit-overview.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit-overview/profile-edit-overview.component.html
@@ -24,7 +24,7 @@
       <tr>
         <th scope="row">Giới tính</th>
         <td>
-          {{ gender }}
+          {{ genderFilter[user?.gender || ""] }}
         </td>
       </tr>
       <tr>
