--- a/FE/src/app/features/service/pages/service/service.component.html
+++ b/FE/src/app/features/service/pages/service/service.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
@@ -31,7 +31,7 @@
 
     <!-- Services Section -->
     <section id="services" class="services section">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <app-service-list></app-service-list>
       </div>
     </section>
@@ -39,7 +39,7 @@
     <!-- Faq Section -->
     <section id="faq" class="faq section">
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title">
         <h2>Những câu hỏi thường gặp</h2>
       </div>
       <!-- Faq -->
