--- a/FE/src/app/features/apartment/pages/apartment/apartment.component.html
+++ b/FE/src/app/features/apartment/pages/apartment/apartment.component.html
@@ -3,18 +3,12 @@
   <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Phòng cho thuê</h1>
-              <p class="mb-0">
-                Odio et unde deleniti. Deserunt numquam exercitationem. Officiis
-                quo odio sint voluptas consequatur ut a odio voluptatem. Sit
-                dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit
-                quaerat ipsum dolorem.
-              </p>
             </div>
           </div>
         </div>
@@ -22,7 +16,7 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Trang chủ</a></li>
+            <li><a [routerLink]="['/']">Trang chủ</a></li>
             <li class="current">Phòng cho thuê</li>
           </ol>
         </div>
@@ -30,14 +24,24 @@
     </div>
 
     <!-- Apartment Filter Engine -->
-    <div class="mt-2" data-aos="fade-up">
+    <div class="mt-2">
       <app-apartment-filter></app-apartment-filter>
     </div>
 
     <!-- Apartment Section -->
-    <section id="apartment" class="apartment section">
-      <!-- List Apartment -->
-      <app-post-root-list></app-post-root-list>
+    <section id="apartment" class="apartment position-relative section">
+      <div [hidden]="posts().length == 0">
+        <!-- List Apartment -->
+        <app-post-root-list [posts]="posts()"></app-post-root-list>
+        <!-- Pagination -->
+        <div class="pt-4">
+          <app-pagination
+            [paginationParams]="paginationParams()"
+            (pageChange)="onPageChange($event)"
+          ></app-pagination>
+        </div>
+      </div>
+      <app-mini-load></app-mini-load>
     </section>
     <!-- /Apartment Section -->
   </main>
