--- a/FE/src/app/features/contact/pages/contact/contact.component.html
+++ b/FE/src/app/features/contact/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
@@ -31,9 +31,9 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <!-- Google Maps -->
-        <div class="mb-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="mb-4">
           <iframe
             style="border: 0; width: 100%; height: 270px"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6302.779672852919!2d105.73445228917237!3d21.05315092240872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454f9de2328cf%3A0xc5685fbea9808d8e!2zTmd1ecOqbiBYw6EsIE1pbmggS2hhaSwgQuG6r2MgVOG7qyBMacOqbSwgSMOgIE7hu5lpLCBWaeG7h3QgTmFt!5e1!3m2!1svi!2s!4v1727938150446!5m2!1svi!2s"
@@ -48,11 +48,7 @@
           <!-- Info -->
           <div class="col-lg-4">
             <!-- Info Item -->
-            <div
-              class="info-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
+            <div class="info-item d-flex">
               <i class="fa-solid fa-location-dot"></i>
               <div>
                 <h3>Địa chỉ</h3>
@@ -61,11 +57,7 @@
             </div>
 
             <!-- Info Item -->
-            <div
-              class="info-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
+            <div class="info-item d-flex">
               <i class="fa-solid fa-phone"></i>
               <div>
                 <h3>Số điện thoại</h3>
@@ -74,11 +66,7 @@
             </div>
 
             <!-- Info Item -->
-            <div
-              class="info-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
+            <div class="info-item d-flex">
               <i class="fa-regular fa-envelope"></i>
               <div>
                 <h3>Email Us</h3>
@@ -92,8 +80,6 @@
               action="forms/contact.php"
               method="post"
               class="php-email-form"
-              data-aos="fade-up"
-              data-aos-delay="100"
             >
               <div class="row gy-4">
                 <div class="col-md-6">
