--- a/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
+++ b/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
@@ -1,12 +1,12 @@
-<div class="container" data-aos="fade-up">
+<div class="container">
   <div class="row gy-5">
-    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+    <div class="col-lg-4 col-md-6">
       <app-lessor-item></app-lessor-item>
     </div>
-    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+    <div class="col-lg-4 col-md-6">
       <app-lessor-item></app-lessor-item>
     </div>
-    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+    <div class="col-lg-4 col-md-6">
       <app-lessor-item></app-lessor-item>
     </div>
   </div>
