--- a/FE/src/app/features/lessor/pages/lessor-detail/lessor-detail.component.html
+++ b/FE/src/app/features/lessor/pages/lessor-detail/lessor-detail.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
@@ -31,7 +31,7 @@
 
     <!-- Lessor Detail Section -->
     <section id="renter-detail" class="renter-detail section">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <div class="row justify-content-between">
           <!-- Lessor profile -->
           <div class="col-md-4">
@@ -39,7 +39,7 @@
           </div>
 
           <!-- Tabs -->
-          <div class="col-md-8" data-aos="fade-up">
+          <div class="col-md-8">
             <app-lessor-detail-tab></app-lessor-detail-tab>
           </div>
         </div>
