--- a/FE/src/app/features/management/lessor/pages/lessor-post/lessor-post.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-post/lessor-post.component.html
@@ -43,15 +43,21 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
           <td mat-cell *matCellDef="let element">
-            {{ status[element.status] }}
+            {{ statusFilter[element.status] }}
           </td>
+        </ng-container>
+
+        <!-- CreatedAt Column-->
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày tạo</th>
+          <td mat-cell *matCellDef="let element">{{ element.createdAt }}</td>
         </ng-container>
 
         <!-- Is Accept Column -->
         <ng-container matColumnDef="isAccept">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
           <td mat-cell *matCellDef="let element">
-            {{ isAccept[element.isAccept] }}
+            {{ isAcceptFilter[element.isAccept] }}
           </td>
         </ng-container>
 
