--- a/FE/src/app/features/service/pages/service-detail/service-detail.component.html
+++ b/FE/src/app/features/service/pages/service-detail/service-detail.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
   <main class="main">
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
@@ -33,7 +33,7 @@
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-5">
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4">
             <div class="service-box">
               <h4>Serices List</h4>
               <div class="services-list">
@@ -91,7 +91,7 @@
             </div>
           </div>
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-8 ps-lg-5">
             <img
               src="assets/img/services.jpg"
               alt=""
