--- a/FE/src/app/shared/components/mini-load/mini-load.component.html
+++ b/FE/src/app/shared/components/mini-load/mini-load.component.html
@@ -1,5 +1,5 @@
 @if(loading()){
-<div class="position-absolute top-50 start-50 translate-middle" data-aos="fade-up">
+<div class="position-absolute top-50 start-50 translate-middle">
   <span class="loader"></span>
 </div>
 }
