--- a/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
+++ b/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
@@ -67,7 +67,7 @@
           <tr>
             <th scope="row">Diện tích</th>
             <td>
-              {{ data.area }}<span>m<sup>2</sup></span>
+              {{ data.area }}m&#178;
             </td>
           </tr>
           <tr>
