--- a/FE/src/app/features/post/components/post-root-item/post-root-item.component.html
+++ b/FE/src/app/features/post/components/post-root-item/post-root-item.component.html
@@ -24,8 +24,7 @@
             priceFilter(post.room?.price || 1)
           }}</span>
           <span class="card-text fw-bold pe-2">
-            {{ post.room?.area }}
-            <span>m<sup>2</sup></span>
+            {{ post.room?.area }}m&#178;
           </span>
           <span class="card-text pe-2">
             {{ post.room?.bedroom }}
