--- a/FE/src/app/core/auth/components/login-form/login-form.component.html
+++ b/FE/src/app/core/auth/components/login-form/login-form.component.html
@@ -55,7 +55,9 @@
       />
       <label class="form-check-label" for="check"> Nhớ mật khẩu </label>
     </div>
-    <a [routerLink]="['/']" class="text-body">Quên mật khẩu?</a>
+    <a [routerLink]="['/verify-reset-password']" class="text-body"
+      >Quên mật khẩu?</a
+    >
   </div>
 
   <div class="text-center text-lg-start mt-3">
