--- a/FE/src/app/features/apartment/components/apartment-detail-tab/apartment-detail-tab.component.html
+++ b/FE/src/app/features/apartment/components/apartment-detail-tab/apartment-detail-tab.component.html
@@ -1,24 +1,20 @@
 <!-- Navigate -->
 <ul class="nav nav-pills mb-3">
   <li>
-    <a class="nav-link active" data-bs-toggle="pill" href="#real-estate-2-tab1"
-      >Video
-    </a>
+    <a class="nav-link active" data-bs-toggle="pill" href="#video">Video</a>
   </li>
   <li>
-    <a class="nav-link" data-bs-toggle="pill" href="#real-estate-2-tab2"
-      >Bản đồ
-    </a>
+    <a class="nav-link" data-bs-toggle="pill" href="#map">Bản đồ</a>
   </li>
 </ul>
 
 <!-- Content -->
 <div class="tab-content">
   <!-- Tab Content One-->
-  <div class="tab-pane fade show active" id="real-estate-2-tab1"></div>
+  <div class="tab-pane fade show active" id="video"></div>
 
   <!-- Tab Content Two -->
-  <div class="tab-pane fade" id="real-estate-2-tab2">
+  <div class="tab-pane fade" id="map">
     <iframe
       style="border: 0; width: 100%; height: 400px"
       src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
