--- a/FE/src/app/features/apartment/components/apartment-filter/apartment-filter.component.scss
+++ b/FE/src/app/features/apartment/components/apartment-filter/apartment-filter.component.scss
@@ -4,3 +4,19 @@
   border-radius: 8px;
   margin-top: 24px;
 }
+
+.search {
+  position: relative;
+  height: 36px;
+  .icon {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 36px;
+    transform: translateY(-50%) translateX(30%);
+    pointer-events: none;
+  }
+  input {
+    padding-left: 48px;
+  }
+}
