--- a/FE/src/app/features/apartment/pages/apartment-detail/apartment-detail.component.html
+++ b/FE/src/app/features/apartment/pages/apartment-detail/apartment-detail.component.html
@@ -9,12 +9,6 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Chi tiết phòng</h1>
-              <p class="mb-0">
-                Odio et unde deleniti. Deserunt numquam exercitationem. Officiis
-                quo odio sint voluptas consequatur ut a odio voluptatem. Sit
-                dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit
-                quaerat ipsum dolorem.
-              </p>
             </div>
           </div>
         </div>
@@ -22,7 +16,7 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Trang chủ</a></li>
+            <li><a [routerLink]="['/apartment']">Phòng cho thuê</a></li>
             <li class="current">Chi tiết phòng</li>
           </ol>
         </div>
@@ -34,7 +28,7 @@
       <div class="container">
         <!-- Apartment Photos -->
         <app-apartment-detail-photos
-          [photos]="[]"
+          [photos]="post.room?.photos || []"
         ></app-apartment-detail-photos>
 
         <div class="row justify-content-between gy-4 mt-4">
@@ -42,35 +36,7 @@
             <!-- Introduction Detail-->
             <div class="portfolio-description">
               <h2>Giới thiệu chi tiết</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                itaque inventore commodi labore quia quia. Exercitationem
-                repudiandae officiis neque suscipit non officia eaque itaque
-                enim. Voluptatem officia accusantium nesciunt est omnis tempora
-                consectetur dignissimos. Sequi nulla at esse enim cum deserunt
-                eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit.
-                Non aspernatur atque natus ut cum nam et. Praesentium error
-                dolores rerum minus sequi quia veritatis eum. Eos et doloribus
-                doloremque nesciunt molestiae laboriosam.
-              </p>
-
-              <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi.
-                Perspiciatis occaecati earum et magnam animi. Quibusdam non qui
-                ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus
-                deserunt assumenda tempore. Delectus voluptas necessitatibus
-                est.
-              </p>
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat
-                debitis. Molestiae et autem libero. Explicabo et quod
-                necessitatibus similique quis dolor eum. Numquam eaque
-                praesentium rem et qui nesciunt.
-              </p>
+              {{ post.description }}
             </div>
 
             <!-- Tabs -->
@@ -81,12 +47,20 @@
           <div class="row col-lg-4">
             <!-- Lessor Information -->
             <div class="col-12 mb-4">
-              <app-lessor-info-card></app-lessor-info-card>
+              @if(post.room?.landlord){
+              <app-lessor-info-card
+                [landlord]="post.room?.landlord!"
+              ></app-lessor-info-card>
+              }
             </div>
 
             <!-- Apartment Information -->
             <div class="col-12">
-              <app-apartment-primary-info></app-apartment-primary-info>
+              @if(post){
+              <app-apartment-primary-info
+                [post]="post"
+              ></app-apartment-primary-info>
+              }
             </div>
           </div>
 
