--- a/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
+++ b/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
@@ -3,12 +3,12 @@
     <div class="row align-items-center">
       <div class="col-3">
         <img
-          src="/assets/img/team/team-1.jpg"
+          [src]="landlord.avatarUrl || '/assets/img/avatar_default.jpg'"
           class="img-fluid rounded-circle"
         />
       </div>
       <div class="d-flex col-8 flex-column justify-content-center">
-        <h5 class="card-title fw-bold fs-5 mb-1">Nguyễn Tú</h5>
+        <h5 class="card-title fw-bold fs-5 mb-1">{{ landlord.fullName }}</h5>
         <p class="card-text text-muted mb-0">Người theo dõi: 3</p>
         <p class="card-text text-muted mb-0">
           <span class="status active">
@@ -24,17 +24,17 @@
     </button>
     <p class="card-text">
       <i class="fa-regular fa-calendar-days"></i>
-      Đã Tham gia: 8 năm 7 tháng
+      Đã Tham gia: {{ landlord.createdAt | date : "MM/dd/yyyy" }}
     </p>
     <p class="card-text">
       <i class="fa-solid fa-phone"></i>
-      Số điện thoại: 0235234324
+      Số điện thoại: {{ landlord.phoneNumber }}
     </p>
     <p class="card-text d-flex gap-3 justify-content-center fs-4">
-      <a href=""><i class="bi bi-twitter-x"></i></a>
-      <a href=""><i class="bi bi-facebook"></i></a>
-      <a href=""><i class="bi bi-instagram"></i></a>
-      <a href=""><i class="bi bi-linkedin"></i></a>
+      <a><i class="bi bi-twitter-x"></i></a>
+      <a><i class="bi bi-facebook"></i></a>
+      <a><i class="bi bi-instagram"></i></a>
+      <a><i class="bi bi-linkedin"></i></a>
     </p>
   </div>
 </div>
