--- a/FE/src/app/features/apartment/components/apartment-primary-info/apartment-primary-info.component.html
+++ b/FE/src/app/features/apartment/components/apartment-primary-info/apartment-primary-info.component.html
@@ -41,7 +41,7 @@
       </li>
       <li>
         <strong><i class="fa-regular fa-clock"></i>Cập nhật:</strong>
-        {{ timeSinceUpdateFilter(post.createdAt!) }}
+        {{ timeSinceUpdateFilter(post.updatedAt!) }}
       </li>
       <li>
         <strong><i class="fa-regular fa-calendar-plus"></i>Ngày đăng:</strong>
