--- a/FE/src/app/features/post/components/post-root-list/post-root-list.component.html
+++ b/FE/src/app/features/post/components/post-root-list/post-root-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   @for (post of posts; track $index) {
   <!-- Property Item -->
-  <div class="">
+  <div>
     <app-post-root-item [post]="post"></app-post-root-item>
   </div>
   }
