--- a/FE/src/app/features/apartment/pages/apartment/apartment.component.html
+++ b/FE/src/app/features/apartment/pages/apartment/apartment.component.html
@@ -22,17 +22,147 @@
         </div>
       </nav>
     </div>
-
     <!-- Apartment Filter Engine -->
     <div class="mt-2">
-      <app-apartment-filter></app-apartment-filter>
+      <form [formGroup]="form" class="container filter-engine">
+        <!-- Province Filter -->
+        <div class="row g-2">
+          <div class="col-md-2">
+            <select
+              class="form-select text-truncate"
+              formControlName="province"
+            >
+              <option class="d-none" value="" selected>Địa điểm</option>
+              <option value="">Toàn quốc</option>
+              @for (place of (provices$ | async); track $index) {
+              <option [ngValue]="place">{{ place?.name }}</option>
+              }
+            </select>
+          </div>
+          <!-- Search Filter -->
+          <div class="search col-md-8">
+            <div class="icon">
+              <img src="/assets/icons/search.svg" />
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Tìm kiếm..."
+              formControlName="search"
+            />
+          </div>
+          <!-- Filter Button -->
+          <div class="col-md-2">
+            <button class="btn btn-dark w-100" (click)="onFilter()">Lọc</button>
+          </div>
+          <!-- Catagory Filter -->
+          <div class="col-md-4">
+            <select
+              class="form-select text-truncate"
+              formControlName="category"
+            >
+              <option class="d-none" value="">Loại nhà đất</option>
+              <option value="RentalRoom">Phòng trọ</option>
+              <option value="MiniApartment">Chung cư mini</option>
+              <option value="Apartment">Chung cư</option>
+            </select>
+          </div>
+          <!-- Price Filter -->
+          <div class="col-md-4">
+            <select class="form-select text-truncate" formControlName="price">
+              <option class="d-none" value="">Mức giá</option>
+              <option value="">Tất cả mức giá</option>
+              <option [ngValue]="{ min: 0, max: 1000000 }">Dưới 1 triệu</option>
+              <option [ngValue]="{ min: 1000000, max: 3000000 }">1 - 3 triệu</option>
+              <option [ngValue]="{ min: 3000000, max: 5000000 }">3 - 5 triệu</option>
+              <option [ngValue]="{ min: 5000000, max: 10000000 }">5 - 10 triệu</option>
+              <option [ngValue]="{ min: 10000000, max: 40000000 }">10 - 40 triệu</option>
+              <option [ngValue]="{ min: 40000000, max: 70000000 }">40 - 70 triệu</option>
+              <option [ngValue]="{ min: 70000000, max: 100000000 }">70 - 100 triệu</option>
+              <option [ngValue]="{ min: 100000000, max: 1000000000000 }">
+                Trên 100 triệu
+              </option>
+            </select>
+          </div>
+          <!-- Area Filter -->
+          <div class="col-md-4">
+            <select class="form-select text-truncate" formControlName="area">
+              <option class="d-none" value="">Diện tích</option>
+              <option value="">Tất cả diện tích</option>
+              <option [ngValue]="{ min: 0, max: 30 }">Dưới 30m&#178;</option>
+              <option [ngValue]="{ min: 30, max: 50 }">30 - 50m&#178;</option>
+              <option [ngValue]="{ min: 50, max: 80 }">50 - 80m&#178;</option>
+              <option [ngValue]="{ min: 80, max: 100 }">80 - 100m&#178;</option>
+              <option [ngValue]="{ min: 100, max: 150 }">
+                100 - 150m&#178;
+              </option>
+              <option [ngValue]="{ min: 150, max: 200 }">
+                150 - 200m&#178;
+              </option>
+              <option [ngValue]="{ min: 200, max: 250 }">
+                200 - 250m&#178;
+              </option>
+              <option [ngValue]="{ min: 250, max: 300 }">
+                250 - 300m&#178;
+              </option>
+              <option [ngValue]="{ min: 300, max: 500 }">
+                300 - 500m&#178;
+              </option>
+              <option [ngValue]="{ min: 500, max: 1000000 }">
+                Trên 500m&#178;
+              </option>
+            </select>
+          </div>
+          <!-- New Filter -->
+          <div class="col-md-2">
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="new-btn"
+              formControlName="new"
+            />
+            <label class="btn btn-dark d-block w-100" for="new-btn"
+              >Mới nhất</label
+            >
+          </div>
+          <!-- Favorite Filter -->
+          <div class="col-md-2">
+            <input
+              type="checkbox"
+              class="btn-check"
+              id="favorite-btn"
+              formControlName="favorite"
+            />
+            <label class="btn btn-dark d-block w-100" for="favorite-btn">
+              Yêu thích
+            </label>
+          </div>
+          <!-- Price Sort Filter -->
+          <div class="col-md-4">
+            <select class="form-select" formControlName="priceSort">
+              <option class="d-none" value="">Sắp xếp giá</option>
+              <option value="PriceAsc">Tăng dần</option>
+              <option value="PriceDesc">Giảm dần</option>
+            </select>
+          </div>
+          <!-- Area Sort Filter -->
+          <div class="col-md-4">
+            <select class="form-select" formControlName="areaSort">
+              <option class="d-none" value="">Sắp xếp diện tích</option>
+              <option value="AreaAsc">Tăng dần</option>
+              <option value="AreaDesc">Giảm dần</option>
+            </select>
+          </div>
+        </div>
+      </form>
     </div>
-
     <!-- Apartment Section -->
     <section id="apartment" class="apartment position-relative section">
       <div [hidden]="posts().length == 0">
         <!-- List Apartment -->
-        <app-post-root-list [posts]="posts()"></app-post-root-list>
+        <ng-container *ngIf="posts().length != 0">
+          <app-post-root-list [posts]="posts()"></app-post-root-list>
+        </ng-container>
         <!-- Pagination -->
         <div class="pt-4">
           <app-pagination
@@ -41,6 +171,11 @@
           ></app-pagination>
         </div>
       </div>
+      <!-- Empty List -->
+      <ng-container *ngIf="posts().length == 0">
+        <p class="fs-4 py-5 text-center">Không có phòng trọ nào!</p>
+      </ng-container>
+      <!-- Mini Loading -->
       <app-mini-load></app-mini-load>
     </section>
     <!-- /Apartment Section -->
