--- a/FE/src/app/features/profiles/components/profile-edit-profile/profile-edit-profile.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit-profile/profile-edit-profile.component.html
@@ -64,15 +64,15 @@
       placeholder="Địa chỉ"
       formControlName="address"
     />
+    @if( address?.invalid && (address?.dirty || address?.touched) ){
+    <mat-error>{{ errorForAddress() }}</mat-error>
+    }
   </mat-form-field>
-  
+
   <!-- Description input -->
   <mat-form-field class="w-100" appearance="outline">
     <mat-label>Mô tả</mat-label>
-    <textarea
-      matInput
-      formControlName="description"
-    ></textarea>
+    <textarea matInput formControlName="description"></textarea>
   </mat-form-field>
 
   <button
