--- a/FE/src/app/features/apartment/pages/apartment/apartment.component.html
+++ b/FE/src/app/features/apartment/pages/apartment/apartment.component.html
@@ -25,8 +25,8 @@
     <!-- Apartment Filter Engine -->
     <div class="mt-2">
       <form [formGroup]="form" class="container filter-engine">
-        <!-- Province Filter -->
         <div class="row g-2">
+          <!-- Province Filter -->
           <div class="col-md-2">
             <select
               class="form-select text-truncate"
@@ -46,6 +46,9 @@
             </div>
             <input
               type="text"
+              [ngbTypeahead]="select"
+              #instance="ngbTypeahead"
+              [selectOnExact]="true"
               class="form-control"
               placeholder="Tìm kiếm..."
               formControlName="search"
@@ -73,12 +76,24 @@
               <option class="d-none" value="">Mức giá</option>
               <option value="">Tất cả mức giá</option>
               <option [ngValue]="{ min: 0, max: 1000000 }">Dưới 1 triệu</option>
-              <option [ngValue]="{ min: 1000000, max: 3000000 }">1 - 3 triệu</option>
-              <option [ngValue]="{ min: 3000000, max: 5000000 }">3 - 5 triệu</option>
-              <option [ngValue]="{ min: 5000000, max: 10000000 }">5 - 10 triệu</option>
-              <option [ngValue]="{ min: 10000000, max: 40000000 }">10 - 40 triệu</option>
-              <option [ngValue]="{ min: 40000000, max: 70000000 }">40 - 70 triệu</option>
-              <option [ngValue]="{ min: 70000000, max: 100000000 }">70 - 100 triệu</option>
+              <option [ngValue]="{ min: 1000000, max: 3000000 }">
+                1 - 3 triệu
+              </option>
+              <option [ngValue]="{ min: 3000000, max: 5000000 }">
+                3 - 5 triệu
+              </option>
+              <option [ngValue]="{ min: 5000000, max: 10000000 }">
+                5 - 10 triệu
+              </option>
+              <option [ngValue]="{ min: 10000000, max: 40000000 }">
+                10 - 40 triệu
+              </option>
+              <option [ngValue]="{ min: 40000000, max: 70000000 }">
+                40 - 70 triệu
+              </option>
+              <option [ngValue]="{ min: 70000000, max: 100000000 }">
+                70 - 100 triệu
+              </option>
               <option [ngValue]="{ min: 100000000, max: 1000000000000 }">
                 Trên 100 triệu
               </option>
@@ -178,7 +193,6 @@
       <!-- Mini Loading -->
       <app-mini-load></app-mini-load>
     </section>
-    <!-- /Apartment Section -->
   </main>
   <!-- Footer -->
   <app-footer></app-footer>
