--- a/FE/src/app/features/lessor/components/lessor-detail-profile/lessor-detail-profile.component.html
+++ b/FE/src/app/features/lessor/components/lessor-detail-profile/lessor-detail-profile.component.html
@@ -3,13 +3,15 @@
     <div class="row">
       <div class="col-3">
         <img
-          src="/assets/img/team/team-1.jpg"
+          [src]="lessor?.avatarUrl || '/assets/img/avatar_default.jpg'"
           class="img-fluid rounded-circle"
         />
       </div>
       <div class="d-flex col-8 flex-column justify-content-center">
-        <h5 class="card-title fw-bold fs-5 mb-1">Nguyễn Tú</h5>
-        <p class="card-text text-muted">Người theo dõi: 3</p>
+        <h5 class="card-title fw-bold fs-5 mb-1">{{ lessor?.fullName }}</h5>
+        <p class="card-text text-muted">
+          Người theo dõi: {{ lessor?.numberOfFollowers }}
+        </p>
       </div>
     </div>
     <button class="btn btn-dark w-100 my-3">
@@ -18,29 +20,25 @@
     </button>
     <p class="card-text">
       <i class="fa-solid fa-newspaper"></i>
-      165 tin đăng
-    </p>
-    <p class="card-text">
-      <i class="fa-regular fa-eye"></i>
-      2000+ lượt xem tin
+      {{ numberOfPost }} tin đăng
     </p>
     <p class="card-text">
       <i class="fa-regular fa-calendar-days"></i>
-      Đã Tham gia: 8 năm 7 tháng
+      Đã Tham gia: {{ timeSinceParticipateFilter(lessor?.createdAt!) }}
     </p>
     <p class="card-text">
       <i class="fa-solid fa-phone"></i>
-      Số điện thoại: 0235234324
+      Số điện thoại: {{ lessor?.phoneNumber }}
     </p>
     <p class="card-text">
       <i class="fa-solid fa-location-dot"></i>
-      Địa chỉ: Số 81 Nguyễn Công Hoàn, Ba Đình, Hà Nội
+      Địa chỉ: {{ lessor?.address }}
     </p>
     <p class="card-text d-flex gap-3 justify-content-center fs-4">
-      <a href=""><i class="bi bi-twitter-x"></i></a>
-      <a href=""><i class="bi bi-facebook"></i></a>
-      <a href=""><i class="bi bi-instagram"></i></a>
-      <a href=""><i class="bi bi-linkedin"></i></a>
+      <a><i class="bi bi-twitter-x"></i></a>
+      <a><i class="bi bi-facebook"></i></a>
+      <a><i class="bi bi-instagram"></i></a>
+      <a><i class="bi bi-linkedin"></i></a>
     </p>
   </div>
 </div>
