--- a/FE/src/app/features/lessor/components/lessor-item/lessor-item.component.html
+++ b/FE/src/app/features/lessor/components/lessor-item/lessor-item.component.html
@@ -1,22 +1,25 @@
 <div class="member">
-  <div class="pic">
-    <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="" />
+  <div class="pic" [routerLink]="['/agency/detail', lessor?.id]">
+    <img
+      [src]="lessor?.avatarUrl || '/assets/img/avatar_default.jpg'"
+      class="img-fluid"
+    />
   </div>
   <div class="member-info">
     <div class="d-flex flex-wrap">
-      <h4 class="flex-fill">Walter White</h4>
+      <h4 class="flex-fill">{{ lessor?.fullName }}</h4>
       <div class="d-flex align-items-center gap-2 pb-2">
+        <span>{{ lessor?.numberOfFollowers }}</span>
         <app-like></app-like>
-        <span>{{ 65 }}</span>
       </div>
     </div>
     <div class="d-flex flex-wrap justify-content-between align-items-center">
-      <span>Chief Executive Officer</span>
+      <span class="multi-truncate">{{ lessor?.address }}</span>
       <div class="social">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a><i class="bi bi-twitter-x"></i></a>
+        <a><i class="bi bi-facebook"></i></a>
+        <a><i class="bi bi-instagram"></i></a>
+        <a><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
   </div>
