--- a/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
+++ b/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
@@ -1,17 +1,10 @@
 <div class="container">
   <div class="row gy-5">
+    @for (lessor of lessors; track $index) {
+    <!-- Lessor -->
     <div class="col-lg-4 col-md-6">
-      <app-lessor-item></app-lessor-item>
+      <app-lessor-item [lessor]="lessor"></app-lessor-item>
     </div>
-    <div class="col-lg-4 col-md-6">
-      <app-lessor-item></app-lessor-item>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <app-lessor-item></app-lessor-item>
-    </div>
-  </div>
-  <div class="pt-5">
-    <!-- Pagination -->
-    <!-- <app-pagination></app-pagination> -->
+    }
   </div>
 </div>
