--- a/FE/src/app/features/lessor/pages/lessor-detail/lessor-detail.component.html
+++ b/FE/src/app/features/lessor/pages/lessor-detail/lessor-detail.component.html
@@ -9,12 +9,6 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Chi tiết người cho thuê</h1>
-              <p class="mb-0">
-                Odio et unde deleniti. Deserunt numquam exercitationem. Officiis
-                quo odio sint voluptas consequatur ut a odio voluptatem. Sit
-                dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit
-                quaerat ipsum dolorem.
-              </p>
             </div>
           </div>
         </div>
@@ -22,7 +16,7 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Trang chủ</a></li>
+            <li><a [routerLink]="['/']">Trang chủ</a></li>
             <li class="current">Chi tiết người cho thuê</li>
           </ol>
         </div>
@@ -35,12 +29,12 @@
         <div class="row justify-content-between">
           <!-- Lessor profile -->
           <div class="col-md-4">
-            <app-lessor-detail-profile></app-lessor-detail-profile>
+            <app-lessor-detail-profile [lessor]="lessor"></app-lessor-detail-profile>
           </div>
 
           <!-- Tabs -->
           <div class="col-md-8">
-            <app-lessor-detail-tab></app-lessor-detail-tab>
+            <app-lessor-detail-tab ></app-lessor-detail-tab>
           </div>
         </div>
       </div>
