--- a/FE/src/app/features/lessor/pages/lessor/lessor.component.html
+++ b/FE/src/app/features/lessor/pages/lessor/lessor.component.html
@@ -9,12 +9,6 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Người cho thuê</h1>
-              <p class="mb-0">
-                Odio et unde deleniti. Deserunt numquam exercitationem. Officiis
-                quo odio sint voluptas consequatur ut a odio voluptatem. Sit
-                dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit
-                quaerat ipsum dolorem.
-              </p>
             </div>
           </div>
         </div>
@@ -22,7 +16,7 @@
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Trang chủ</a></li>
+            <li><a [routerLink]="['/']">Trang chủ</a></li>
             <li class="current">Người cho thuê</li>
           </ol>
         </div>
@@ -31,14 +25,55 @@
 
     <!-- Lessor Filter Engine -->
     <div class="mt-2">
-      <app-lessor-filter></app-lessor-filter>
+      <form [formGroup]="form" class="container filter-engine">
+        <div class="row g-2">
+          <!-- Search Filter -->
+          <div class="search col-md-10">
+            <div class="icon">
+              <img src="/assets/icons/search.svg" />
+            </div>
+            <input
+              type="text"
+              [ngbTypeahead]="select"
+              #instance="ngbTypeahead"
+              [selectOnExact]="true"
+              class="form-control"
+              placeholder="Tìm kiếm..."
+              formControlName="search"
+            />
+          </div>
+
+          <!-- Filter Button -->
+          <div class="col-md-2">
+            <button class="btn btn-dark w-100" (click)="onFilter()">Lọc</button>
+          </div>
+        </div>
+      </form>
     </div>
 
     <!-- Lessor Section -->
-    <section id="agents" class="agents section">
-      <!-- Lessor List -->
-      <app-lessor-list></app-lessor-list>
+    <section id="agents" class="agents position-relative section">
+      <div [hidden]="lessors().length == 0">
+        <!-- List Lessor -->
+        <ng-container *ngIf="lessors().length != 0">
+          <app-lessor-list [lessors]="lessors()"></app-lessor-list>
+        </ng-container>
+        <!-- Pagination -->
+        <div class="pt-4">
+          <app-pagination
+            [paginationParams]="paginationParams()"
+            (pageChange)="onPageChange($event)"
+          ></app-pagination>
+        </div>
+      </div>
+      <!-- Empty List -->
+      <ng-container *ngIf="lessors().length == 0">
+        <p class="fs-4 py-5 text-center">Không có chủ thuê nào!</p>
+      </ng-container>
+      <!-- Mini Loading -->
+      <app-mini-load></app-mini-load>
     </section>
+    <!-- /Apartment Section -->
   </main>
   <!-- Footer -->
   <app-footer></app-footer>
