--- a/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
+++ b/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
@@ -69,6 +69,10 @@
             <td>{{ data.price }} đồng</td>
           </tr>
           <tr>
+            <th scope="row">Tiền đặt cọc</th>
+            <td>{{ data.price }} đồng</td>
+          </tr>
+          <tr>
             <th scope="row">Nội thất</th>
             <td>
               {{ interiorFilter[data.interior] }}
