--- a/FE/src/app/features/apartment/components/apartment-update/apartment-update.component.html
+++ b/FE/src/app/features/apartment/components/apartment-update/apartment-update.component.html
@@ -154,7 +154,7 @@
     </div>
     <div class="row">
       <!-- Area input -->
-      <mat-form-field class="col-lg-6" appearance="outline">
+      <mat-form-field class="col-lg-4" appearance="outline">
         <mat-label>Diện tích</mat-label>
         <input
           matInput
@@ -170,7 +170,7 @@
         }
       </mat-form-field>
       <!-- Price input -->
-      <mat-form-field class="col-lg-6" appearance="outline">
+      <mat-form-field class="col-lg-4" appearance="outline">
         <mat-label>Giá phòng</mat-label>
         <input
           matInput
@@ -185,6 +185,22 @@
         <mat-error>{{ errorForPrice() }}</mat-error>
         }
       </mat-form-field>
+          <!-- Deposite input -->
+    <mat-form-field class="col-lg-4" appearance="outline">
+      <mat-label>Tiền đặt cọc</mat-label>
+      <input
+        matInput
+        type="number"
+        class="text-end hide-spin"
+        min="0"
+        placeholder="0"
+        formControlName="deposite"
+      />
+      <span matTextSuffix>&nbsp;đồng</span>
+      @if( deposite?.invalid && (deposite?.dirty || deposite?.touched) ){
+      <mat-error>{{ errorForDeposite() }}</mat-error>
+      }
+    </mat-form-field>
     </div>
 
     <!-- Photos view -->
