--- a/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
+++ b/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
@@ -9,7 +9,9 @@
       </div>
       <div class="d-flex col-8 flex-column justify-content-center">
         <h5 class="card-title fw-bold fs-5 mb-1">{{ landlord?.fullName }}</h5>
-        <p class="card-text text-muted mb-0">Người theo dõi: 3</p>
+        <p class="card-text text-muted mb-0">
+          Người theo dõi: {{ landlord?.numberOfFollowers }}
+        </p>
         <p class="card-text text-muted mb-0">
           @if(isOnline()){
           <span class="status online">
@@ -24,10 +26,7 @@
       </div>
     </div>
     <div class="d-flex flex-column gap-1 my-3">
-      <button class="btn btn-dark w-100">
-        <i class="fa-solid fa-comment-dots"></i>
-        Chat
-      </button>
+      @if(isAuthentication && (landlord?.id !== user?.id)){
       <div class="w-100">
         <input
           #follow
@@ -44,6 +43,19 @@
           Hủy theo dõi }
         </label>
       </div>
+      <button class="btn btn-dark w-100">
+        <i class="fa-solid fa-comment-dots"></i>
+        Chat
+      </button>
+      <button class="btn btn-dark w-100" (click)="onReservation()">
+        <i class="fa-solid fa-calendar-days"></i>
+        Yêu cầu xem phòng
+      </button>
+      <button class="btn btn-dark w-100" (click)="onReservation()">
+        <i class="fa-regular fa-handshake"></i>
+        Đặt phòng
+      </button>
+      }
     </div>
     <p class="card-text">
       <i class="fa-regular fa-calendar-days"></i>
