--- a/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
+++ b/FE/src/app/features/lessor/components/lessor-info-card/lessor-info-card.component.html
@@ -51,7 +51,7 @@
         <i class="fa-solid fa-calendar-days"></i>
         Yêu cầu xem phòng
       </button>
-      <button class="btn btn-dark w-100" (click)="onReservation()">
+      <button class="btn btn-dark w-100" (click)="onBooking()">
         <i class="fa-regular fa-handshake"></i>
         Đặt phòng
       </button>
