--- a/FE/src/app/features/apartment/pages/apartment-detail/apartment-detail.component.html
+++ b/FE/src/app/features/apartment/pages/apartment-detail/apartment-detail.component.html
@@ -37,7 +37,10 @@
             <!-- Introduction Detail-->
             <div class="portfolio-description">
               <h2>Giới thiệu chi tiết</h2>
-              <h6>Tiêu đề bài viết: {{ post()?.title }}</h6>
+              <h6>
+                <i class="fa-solid fa-book-open"></i>
+                {{ post()?.title }}
+              </h6>
               {{ post()?.description }}
             </div>
 
