--- a/FE/src/app/features/post/components/post-root-item/post-root-item.component.html
+++ b/FE/src/app/features/post/components/post-root-item/post-root-item.component.html
@@ -18,7 +18,7 @@
         <div class="d-flex">
           <h5 class="card-title flex-fill">{{ post.title }}</h5>
           @if(isAuthentication){
-          <app-like (save)="onSave($event)"></app-like>
+          <app-like [isSaved]="checkSave(post.id)" (save)="onSave($event)"></app-like>
           }
         </div>
         <div class="d-flex">
