--- a/FE/src/app/features/profiles/pages/profile/profile.component.html
+++ b/FE/src/app/features/profiles/pages/profile/profile.component.html
@@ -28,8 +28,9 @@
               </div>
               <div class="d-flex flex-column">
                 <div class="fw-bold">{{ user?.fullName }}</div>
-                <div class="text-secondary">Người theo dõi {{ 0 }}</div>
-                <div class="text-secondary">Người đang dõi {{ 0 }}</div>
+                <div class="text-secondary">
+                  Người theo dõi {{ user?.numberOfFollowers }}
+                </div>
               </div>
             </div>
             <hr />
@@ -56,6 +57,17 @@
                   >
                     <i class="fa-solid fa-clock-rotate-left"></i>
                     <span>Lịch sử thuê trọ</span>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a
+                    matRipple
+                    routerLink="/profile/reservation"
+                    class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
+                    routerLinkActive="active"
+                  >
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <span>Danh sách đặt lịch</span>
                   </a>
                 </li>
                 <li class="mb-2">
