--- a/FE/src/app/features/reservation/components/reservation-insert/reservation-insert.component.html
+++ b/FE/src/app/features/reservation/components/reservation-insert/reservation-insert.component.html
@@ -10,18 +10,48 @@
 <div class="modal-body">
   <form [formGroup]="form">
     <div class="row">
-      <!-- ReservationDate select -->
-      <mat-form-field class="col-lg-12" appearance="outline">
+      <!-- Date select -->
+      <mat-form-field class="col-lg-4" appearance="outline">
         <mat-label>Ngày đặt lịch</mat-label>
         <input
           matInput
           [min]="minDate"
           [matDatepicker]="picker"
           placeholder="MM/DD/YYYY"
-          formControlName="reservationDate"
+          formControlName="date"
         />
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <!-- Hour input -->
+      <mat-form-field class="col-lg-4" appearance="outline">
+        <mat-label>Giờ</mat-label>
+        <input
+          matInput
+          type="number"
+          min="1"
+          max="12"
+          class="hide-spin"
+          formControlName="hour"
+        />
+        @if( hour?.invalid && (hour?.dirty || hour?.touched) ){
+        <mat-error>{{ errorForHour() }}</mat-error>
+        }
+      </mat-form-field>
+      <!-- Minute input -->
+      <mat-form-field class="col-lg-4" appearance="outline">
+        <mat-label>Phút</mat-label>
+        <input
+          matInput
+          type="number"
+          min="0"
+          max="60"
+          class="hide-spin"
+          formControlName="minute"
+        />
+        @if( minute?.invalid && (minute?.dirty || minute?.touched) ){
+        <mat-error>{{ errorForMinute() }}</mat-error>
+        }
       </mat-form-field>
     </div>
     <!-- Note input -->
