--- a/FE/src/app/features/reservation/components/reservation-list/reservation-list.component.html
+++ b/FE/src/app/features/reservation/components/reservation-list/reservation-list.component.html
@@ -1,12 +1,7 @@
 <div class="checked-out-room">
-  <h5 class="fs-5 fw-bold mt-3 mb-4">Quản lý phòng trọ</h5>
+  <h5 class="fs-5 fw-bold mt-3 mb-4">Danh sách yêu cầu xem phòng</h5>
   <div class="row align-items-center justify-content-between g-2 mt-3 mb-5">
-    <div class="col-lg-3">
-      <button routerLink="/lessor/apartment/insert" class="btn btn-dark w-100">
-        Thêm phòng mới
-      </button>
-    </div>
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <app-search
         [placeholder]="'Tìm kiếm...'"
         (search)="onSearch($event)"
@@ -17,49 +12,37 @@
   <div class="position-relative">
     <div [hidden]="dataSource.data.length == 0">
       <table mat-table [dataSource]="dataSource" matSort>
-        <!-- Name Column -->
+        <!-- Room name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.room?.name }}</td>
         </ng-container>
 
-        <!-- Category Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Thể loại</th>
+        <!-- CreateAt Column -->
+        <ng-container matColumnDef="createAt">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Ngày yêu cầu
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ categoryFilter[element.category] }}
+            {{ element.createAt | date : "MM/dd/yyyy" }}
           </td>
         </ng-container>
 
-        <!-- Address Column-->
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Địa chỉ</th>
-          <td mat-cell *matCellDef="let element">{{ element.address }}</td>
-        </ng-container>
-
-        <!-- Area Column-->
-        <ng-container matColumnDef="area">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Diện tích</th>
-          <td mat-cell *matCellDef="let element">{{ element.area }}</td>
-        </ng-container>
-
-        <!-- Price Column-->
-        <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá</th>
-          <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-        </ng-container>
-
-        <!-- CreatedAt Column-->
-        <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày tạo</th>
-          <td mat-cell *matCellDef="let element">{{ element.createdAt | date : "MM/dd/yyyy" }}</td>
-        </ng-container>
-
-        <!-- Condition Column-->
-        <ng-container matColumnDef="condition">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
+        <!-- ReservationDate Column-->
+        <ng-container matColumnDef="reservationDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Thời gian mong muốn
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ conditionFilter[element.condition] }}
+            {{ element.reservationDate | date : "MM/dd/yyyy hh:mm a" }}
+          </td>
+        </ng-container>
+
+        <!-- Status Column-->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
+          <td mat-cell *matCellDef="let element">
+            {{ statusReservationFilter[element.status] }}
           </td>
         </ng-container>
 
@@ -83,7 +66,10 @@
                 <i class="fa-solid fa-wrench"></i>
                 <span>Sửa</span>
               </button>
-              <button (click)="onDelete(element.id)" mat-menu-item>
+              <button
+                (click)="onDelete(element.id, element.status)"
+                mat-menu-item
+              >
                 <i class="fa-solid fa-trash"></i>
                 <span>Xóa</span>
               </button>
@@ -106,7 +92,7 @@
 
     <!-- Empty table -->
     <ng-container *ngIf="dataSource.data.length == 0">
-      <p class="fs-4 py-5 text-center">Bạn chưa có phòng trọ nào!</p>
+      <p class="fs-4 py-5 text-center">Bạn chưa có đặt lịch nào!</p>
     </ng-container>
 
     <!-- Mini Loading -->
